--- a/client/projects/web/src/app/shell/child-components/footer/footer.component.scss
+++ b/client/projects/web/src/app/shell/child-components/footer/footer.component.scss
@@ -6,6 +6,7 @@ footer {
   height: $footer-height;
   text-align: center;
   padding-top: 10px;
+  background-color: $content-background;
 
   small {
     @media screen and (max-width: $sm) {
