--- a/client/projects/web/src/styles/styles.scss
+++ b/client/projects/web/src/styles/styles.scss
@@ -212,6 +212,10 @@ a.no-hover {
   .d-inline-block.desktop {
     display: block !important;
   }
+
+  .desktop {
+    display: none;
+  }
 }
 
 .standalone-statement {
